<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name1"
            android:textColor="@color/colorGrey"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:text="@string/app_name2"
            android:textColor="@color/colorDarkBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name3"
            android:textColor="@color/colorDarkBlue"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="-------------------------------------------------------------------------"
            android:textColor="@color/colorGrey"/>

    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="100dp">
      <LinearLayout
          android:layout_width="80dp"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_weight="0.5">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:text="@string/app_name4"
              android:textColor="@color/colorDarkGrey"
              android:layout_marginLeft="10dp"
              />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="30dp"
              android:text="@string/app_name5"
              android:textColor="@color/colorDarkGrey"
              android:textSize="25sp"
              android:textStyle="bold"
              android:layout_marginLeft="10dp"

              />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="30dp"
              android:text="@string/app_name8"
              android:textColor="@color/colorDarkGrey"
              android:layout_marginLeft="10dp"
              android:layout_marginTop="30dp"
              />

      </LinearLayout>
      <LinearLayout
          android:layout_width="100dp"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:layout_weight="0.5">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="50dp"
              android:text="@string/app_name6"
              android:textColor="@color/colorDarkGrey"
              android:layout_marginLeft="10dp"
              />
          <TextView
              android:layout_width="match_parent"
              android:layout_height="30dp"
              android:text="@string/app_name7"
              android:textColor="@color/colorDarkGrey"
              android:textSize="20sp"
              android:textStyle="bold"
              android:layout_marginLeft="10dp"
              />

      </LinearLayout>


  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/picture1">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">
        <Button
            android:layout_width="200sp"
            android:layout_height="50dp"
            android:text="@string/app_name9">

        </Button>


        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/app_name10"/>
         </LinearLayout>


</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPurpur">
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.7">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Price"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="2x CHIKEN GERPEK"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="$ 41.00"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="50dp"/>

        </LinearLayout>


</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="People present"
            android:textSize="20sp">
                    </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/picture2" >
              </ImageView>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/picture3">

        </ImageView>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/picture_4">

        </ImageView>
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/picture5">

        </ImageView>

    </LinearLayout>





</LinearLayout>
